--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -18,13 +18,13 @@
             <td><%= task.end_date %></td>
             <td><%= task.end_time.to_s[11,8] %></td>
             <td><%= task.description.truncate(15) %></td>
-            <td><%= link_to 'View/edit', edit_task_path(task) %></td>
-            <td><%= link_to 'Delete', task, method: :delete %></td>
+            <td><%= link_to 'View/edit', edit_user_task_url(@user, task) %></td>
+            <td><%= link_to 'Delete', [task.user, task], method: :delete %></td>
         </tr>
     <% end %>
 
     <tr>
-        <%= form_with scope: :task, url: root_path, local: true do |form| %>
+        <%= form_with(model: [@user, @user.tasks.build], url: root_path, local: true) do |form| %>
             <td>
                 <%= form.text_field :title %>
             </td>
